--- a/_sass/_tokens.scss
+++ b/_sass/_tokens.scss
@@ -32,8 +32,6 @@
   --sb-measure: 38rem;
   --sb-font: "Lexend", ui-sans-serif, system-ui, -apple-system, "Segoe UI", sans-serif;
   --sb-heading-font: var(--sb-font);
-
-  --maxw: 46rem;
 }
 
 html[data-size="s"]  { --sb-scale: .92; }
